# sim_vicon

./: .gitignore  CMakeLists.txt  README.md  sim_vicon.ini  sim_vicon_tracker.cpp
include/: Config.h  RotationUtils.h  SimViconTracker.h  ViconGUI.h  sim_vicon.hpp
src/: Config.cpp  RotationUtils.cpp  SimViconTracker.cpp  ViconGUI.cpp  main.cpp
